new proj/src/objects/GE_ES_Region_Role_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>GE_HQ_Region__c</referenceTo>
        <relationshipLabel>Region Role Assignments</relationshipLabel>
        <relationshipName>Region_Role_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_path__c</fullName>
        <label>GE_ES_Risk_path</label>
        <picklist>
            <picklistValues>
                <fullName>Fast Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conventional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sales_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Region</label>
        <referenceTo>GE_ES_Sales_Region__c</referenceTo>
        <relationshipLabel>Region Role Assignments</relationshipLabel>
        <relationshipName>Region_Role_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Region_Role_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_Queue_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Queue Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Queue__c</fullName>
        <inlineHelpText>A new field that will hold the Public group against a given role and region. Every RRA record will have either the user or the Queue field populated.</inlineHelpText>
        <label>Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier_2__c</fullName>
        <label>Tier2</label>
        <picklist>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier_3__c</fullName>
        <label>Tier3</label>
        <picklist>
            <picklistValues>
                <fullName>SS - Subsea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Wellstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Services (MS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Services (TS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS) Multi P&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opex CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opex Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Multi P&amp;Ls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Service Multi P&amp;Ls</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_PL_Configuration__c</fullName>
        <label>Role P&amp;L Configuration</label>
        <referenceTo>GE_ES_Role_PL_Configuration__c</referenceTo>
        <relationshipLabel>Region Role Assignments</relationshipLabel>
        <relationshipName>GE_ES_Region_Role_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Region Role Assignment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Role Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Role Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>